--- a/InventoryProgram/ClientApp/package.json
+++ b/InventoryProgram/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-bootstrap-typeahead": "^3.4.6",
     "bootstrap": "^4.3.1",
     "connected-react-router": "6.5.2",
     "history": "4.10.1",
@@ -10,6 +11,7 @@
     "merge": "1.2.1",
     "popper.js": "^1.16.0",
     "react": "16.11.0",
+    "react-bootstrap-typeahead": "3.4.7",
     "react-dom": "16.11.0",
     "react-redux": "7.1.1",
     "react-router": "5.1.2",
